--- a/css/messageStyle.css
+++ b/css/messageStyle.css
@@ -12,12 +12,12 @@ body {
 }
 
 .chatbox {
-	width: 500px;
-	min-width: 800px;
-	height: 700px;
+	width: 900px;
+	min-width: 900px;
+	height: 720px;
 	background: #fff;
 	padding: 25px;
-	margin: 20px auto;
+	margin: 90px auto;
 	box-shadow: 0 3px #ccc;
 }
 
@@ -73,7 +73,7 @@ body {
 }
 
 .self .chat-message {
-	background: #1ddced;
+	background: #6ea1ff;
 	order: -1;
 }
 
@@ -95,19 +95,19 @@ body {
 	color: #333;
 }
 
-.chat-form textarea:focus {
+.chat-form [type=text]:focus {
 	background: #fff;
 }
 
 .chat-form button {
-	background: #1ddced;
+	background: #6ea1ff;
 	padding: 5px 15px;
 	font-size: 30px;
 	color: #fff;
 	border: none;
 	margin: 0 10px;
 	border-radius: 3px;
-	box-shadow: 0 3px 0 #0eb2c1;
+	box-shadow: 0 3px 0 #637bff;
 	cursor: pointer;
 
 	-webkit-transaction: background .2s ease;
@@ -115,19 +115,19 @@ body {
 	-o-transaction: backgroud .2s ease;
 }
 
-.chat-form button:hover {
-	background: #13c8d9;
+.chat-form [type=submit]:hover {
+	background: #6ea1ff;
 }
 
 .chat-form [type=submit] {
-	background: #1ddced;
+	background: #6ea1ff;
 	padding: 5px 15px;
 	font-size: 30px;
 	color: #fff;
 	border: none;
 	margin: 0 10px;
 	border-radius: 3px;
-	box-shadow: 0 3px 0 #0eb2c1;
+	box-shadow: 0 3px 0 #637bff;
 	cursor: pointer;
 
 	-webkit-transaction: background .2s ease;
@@ -148,22 +148,60 @@ body {
 }
 
 .online-users {
-	width: 200px;
-	min-width: 200px;
-	height: 700px;
+	width: 300px;
+	min-width: 300px;
+	height: 720px;
 	background: #fff;
 	padding: 25px;
-	margin: 20px auto;
+	margin: auto auto;
 	box-shadow: 0 3px #ccc;
+	overflow-x: hidden;
+	overflow-y: scroll;
 }
-.online-users button {
-	background: #1ddced;
+.online-users [type=submit] {
+	background: #6ea1ff;
 	padding: 5px 15px;
 	font-size: 30px;
 	color: #fff;
 	border: none;
-	margin: 0 10px;
+	margin: 10px;
 	border-radius: 3px;
-	box-shadow: 0 3px 0 #0eb2c1;
+	box-shadow: 0 3px 0 #637bff;
 	cursor: pointer;
+}
+.online-users::-webkit-scrollbar {
+	width: 10px;
+}
+
+.online-users::-webkit-scrollbar-thumb {
+	border-radius: 5px;
+	background: rgba(0,0,0,.1);
+}
+
+.top-bar {
+	position: absolute;
+	width: 100%;
+	height: 65px;
+	margin: 5px;
+}
+.top-bar [type=submit] {
+	background: #6ea1ff;
+	padding: 5px 15px;
+	font-size: 30px;
+	color: #fff;
+	border: none;
+	margin: 0 50px 0 auto;
+	border-radius: 3px;
+	box-shadow: 0 3px 0 #637bff;
+	cursor: pointer;
+
+	-webkit-transaction: background .2s ease;
+	-moz-transaction: backgroud .2s ease;
+	-o-transaction: backgroud .2s ease;
+
+
+}
+.top-bar .logo {
+	height: 53px;
+	margin-left:50px;
 }
