--- a/css/signin.css
+++ b/css/signin.css
@@ -5,11 +5,9 @@ body {
 
 body {
   display: -ms-flexbox;
-  display: flex;
   -ms-flex-align: center;
   align-items: center;
-  padding-top: 40px;
-  padding-bottom: 40px;
+  padding: 40px 30%;
   background-color: #f5f5f5;
 }
 
@@ -41,4 +39,7 @@ body {
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
+}
+.logo {
+  height: 150px;
 }
