--- a/css/homeStyle.css
+++ b/css/homeStyle.css
@@ -10,6 +10,7 @@ body {
     grid-template-rows: 90px 50%;
 		background-color: #e1e1e1;
 		color: #444;
+
 	}
 
 /*.box {*/
@@ -20,7 +21,7 @@ body {
 .logo {
     grid-column: 1;
     grid-row: 1;
-    padding: 7px;
+    padding: 5px;
 }
 .logo img{
     height: 60px;
@@ -94,25 +95,32 @@ body {
 	box-shadow: 0 3px 0 #637bff;
 	cursor: pointer;
 }
-/*.top-bar {*/
-	/*position: absolute;*/
-	/*width: 100%;*/
-	/*height: 65px;*/
-	/*margin: 5px;*/
-/*}*/
-/*.top-bar [type=submit] {*/
-	/*background: #6ea1ff;*/
-	/*padding: 8px 10px;*/
-	/*font-size: 20px;*/
-	/*color: #fff;*/
-	/*border: none;*/
-	/*margin: 0 10px;*/
-	/*margin-left:auto; margin-right:50px;*/
-	/*border-radius: 3px;*/
-	/*box-shadow: 0 3px 0 #637bff;*/
-	/*cursor: pointer;*/
-/*}*/
-/*.top-bar .logo {*/
-	/*height: 53px;*/
-	/*margin-left:50px;*/
-/*}*/
+.userBox {
+	grid-column: 1/3 ;
+	grid-row: 2;
+	height: 600px;
+	padding: 20px;
+	background: #fbfbfb;
+	border-radius: 10px;
+	overflow-x: hidden;
+	overflow-y: scroll;
+}
+.userBox textarea {
+	padding: 10px;
+	font-size: 50px;
+	color: #333;
+}
+
+.usernameList {
+    font-family: Tahoma;
+    font-size: 35px;
+    text-align: center;
+}
+/* .userBox::-webkit-scrollbar {
+	width: 10px;
+}
+
+.userBox:-webkit-scrollbar-thumb {
+	border-radius: 5px;
+	background: rgba(0,0,0,.1);
+} */
